Update pom.xml
Changed Java version to 15